<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SNAPPREFS</string>
    <string name="pref_general_title">GENERAL SETTINGS</string> 
    <string name="pref_received_title">RECEIVED SNAPS</string>
	<string name="pref_sent_title">SENT SNAPS</string> 
	<string name="pref_colour_title">COLOUR SETTINGS</string>
	<string name="pref_debug_title">INFORMATIONS</string>
	
	<string name="pref_thanks_title">Thanks to</string>
	<string name="pref_thanks_summary">P1ngu1n, manvir, elesbb, chiralcode, Yoganandh</string>
	    <string name="pref_donate_title">Donate</string>
    <string name="pref_donate_summary">Support me by buying some coffee using PayPal. Donations are highly appreciated.</string>

    <string name="pref_support_title">Support</string>
    <string name="pref_support_summary">Opens the XDA thread of the module, please search through the replies first.</string>
	
	<string name="hidebf_text">Hide Best-Friends</string>
	<string name="hidebf_summary">Hides your Best-Friends from you</string>
	<string name="hiderecent_text">Hide Recents</string>
	<string name="hiderecent_summary">Hides people who you recently sent a snap to</string>
	
	<string name="screenshot_text">Screenshot Detection</string>
	<string name="screenshot_text_summary">Blocks the screenshot reporting</string>
	
	<string name="full_text">Unlimited Text</string>   
	<string name="full_text_summary">Enables unlimited text for the captions</string>
	<string name="select_text">Select-All</string>
	<string name="select_text_summary">Adds Select-All function for sending snaps</string>
	<string name="selectstory_text">Including My Story</string>
	<string name="selectstory_text_summary">Includes My Story to the Select-All function</string>
	
	<string name="rainbow_text">Rainbow text</string>
	<string name="rainbow_text_summary">Makes each letter separately colored</string>
	<string name="txtcolour_text">Text colour customizations</string>
	<string name="txtstyle_text">Custom text styles</string>
	<string name="txtstyle_text_summary">Enables bold, italic and both styles</string>
	<string name="txtgravity_text">Text gravity</string>
	<string name="txtgravity_text_summary">Enables changes to the alignment of the text</string>
	<string name="bgcolour_text">Background colour customization</string>
	<string name="bg_transparency_text">Background opacity customization</string>
	<string name="size_text">Text-size customization</string>
	<string name="transparency_text">Caption opacity customization</string>
	<string name="debug_text">Debug mode</string>
	<string name="version_text">Version</string>
	<string name="version_summary">Current version is: v1.3.1</string>
	<string name="general">General settings</string>
	<string name="saving">Saving settings</string>
	<string name="sharing">Sharing settings</string>
	
    <string name="button_label">OK</string>
    <string name="pref_name">Pick a color</string>
    <string name="pref_summary">DialogPreference with Color Picker.</string>
    <string name="dialog_default">Default</string>
    
    <string name="dialog_txtcolor">Text Colour</string>
    <string name="dialog_bgcolor">BG Colour</string>
    
    <string name="caption_onboarding_message">Tap to add a caption!</string>
    <string name="swipe_filters_onboarding_message">Swipe for filters!</string>

<!-- Saving settings -->
<string name="pref_category_snapchats">Saving</string>
<string translatable="false" name="pref_save_snapchats_default">0</string>
<string name="pref_save_snaps_images">Image snaps</string>
<string name="pref_save_snaps_videos">Video snaps</string>
<string name="pref_save_stories_images">Image stories</string>
<string name="pref_save_stories_videos">Video stories</string>
<string name="pref_save_sent_snaps_title">Sent snaps</string>
<string name="pref_save_sent_snaps_summary_on">Sent snaps will be saved</string>
<string name="pref_save_sent_snaps_summary_off">Sent snaps won\'t be saved</string>

<string-array name="pref_save_mode_entries">
<item>Save automatically</item>
<item>Sweep to save</item>
<item>Don\'t save</item>
</string-array>

<string-array translatable="false" name="pref_save_mode_values">
<item>0</item>
<item>1</item>
<item>2</item>
</string-array>

<!-- Viewing settings -->

<string name="pref_category_viewing">Viewing</string>
<string name="pref_timer_minimum_title">Minimum timer duration</string>
<string translatable="false" name="pref_timer_minimum_default_value">0</string>
<string-array name="pref_timer_minimum_entries">
<item>Disabled</item>
<item>3 seconds</item>
<item>5 seconds</item>
<item>7 seconds</item>
<item>10 seconds</item>
</string-array>


<string-array translatable="false" name="pref_timer_minimum_values">
<item>0</item>
<item>3</item>
<item>5</item>
<item>7</item>
<item>10</item>
</string-array>

<string name="pref_toasts_title">Show toast messages</string>
<string name="pref_toasts_summary_on">Toast messages are enabled</string>
<string name="pref_toasts_summary_off">Toast messages are disabled</string>
<string name="pref_toasts_duration_title">Toast duration</string>
<string translatable="false" name="pref_toasts_duration_default_value">0</string>
<string-array name="pref_toasts_duration_entries">
<item>Short</item>
<item>Long</item>
</string-array>
<string-array translatable="false" name="pref_toasts_duration_values">
<item>0</item>
<item>1</item>
</string-array>

<!-- Folder settings -->


<string name="pref_category_folder">Folder</string>
<string name="pref_save_location_title">Saving location</string>
<string name="pref_sort_files_mode_title">Sort files by category</string>
<string name="pref_sort_files_mode_summary_on">Snaps and stories will be saved into different folders</string>
<string name="pref_sort_files_mode_summary_off">Snaps and stories will be sorted into the same folder</string>
<string name="pref_sort_files_username_title">Sort files by sender</string>
<string name="pref_sort_files_username_summary_on">Files will be sorted into a subfolder foreach sender</string>
<string name="pref_sort_files_username_summary_off">Files will be sorted into the same folder foreach sender</string>

<!-- Toast messages -->

<string name="image_exists">This image already exists.</string>
<string name="video_exists">This video already exists.</string>
<string name="image_saved">This image has been saved.</string>
<string name="video_saved">This video has been saved.</string>
<string name="image_not_saved">An error occurred while saving this image.</string>
<string name="video_not_saved">An error occurred while saving this video.</string>

<!-- Dialogs -->
    <string name="module_not_enabled">Snapshare is not enabled. Please enable it in Xposed Installer and reboot your device.</string>
    <string name="size_error">"The video you shared is too large (%1$s), it probably won't send. Snapshat only supports files up to %2$s."</string>
    <string name="unable_open_xposed">Unable to open Xposed Installer, is it installed?</string>

    <string name="open_xposed_installer">Open Xposed Installer</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="go_back">Go back</string>
    <string name="close">Close</string>

    <!-- Media settings -->
    <string name="pref_media">Media</string>

    <string name="pref_rotation_title">Rotation mode</string>
    <string name="pref_rotation_default" translatable="false">90</string>
    <string-array name="pref_rotation_entries">
        <item>Don\'t rotate</item>
        <item>Clockwise (90°)</item>
        <item>Counterclockwise (-90°)</item>
    </string-array>
    <string-array name="pref_rotation_values" translatable="false">
        <item>0</item>
        <item>90</item>
        <item>270</item>
    </string-array>

    <string name="pref_adjustment_title">Image adjustment method</string>
    <string name="pref_adjustment_default" translatable="false">0</string>
    <string-array name="pref_adjustment_entries">
        <item>Crop</item>
        <item>Scale</item>
        <item>None</item>
    </string-array>
    <string-array name="pref_adjustment_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Caption settings -->
    <string name="pref_caption">Captions</string>
    <string name="pref_caption_explanation">Note: unlimited captions works for BOTH snaps taken with Snapchat\'s camera and snaps shared with Snapshare, so it\'s NOT limited to shared snaps.</string>

    <string name="pref_caption_unlimited_vanilla_title">Unlimited regular captions</string>
    <string name="pref_caption_unlimited_vanilla_on">Regular captions are unlimited</string>
    <string name="pref_caption_unlimited_vanilla_off">Regular captions are only one line</string>

    <string name="pref_caption_unlimited_fat_title">Unlimited fat captions</string>
    <string name="pref_caption_unlimited_fat_on">Fat captions are unlimited</string>
    <string name="pref_caption_unlimited_fat_off">Fat captions are 33 characters maximum</string>

    <!-- Other settings -->
    <string name="pref_other">Other</string>

    <string name="pref_launcher_title">Show launcher icon</string>
    <string name="pref_launcher_on">Access settings through my launcher</string>
    <string name="pref_launcher_off">Access settings through Xposed Installer</string>

    <string name="pref_debug_on">Debug information is shown in the Xposed Log</string>
    <string name="pref_debug_off">Debug information is not shown in the Xposed Log</string>


</resources>
