<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:key="pref_key_general"
        android:title="@string/pref_general_title">
        <CheckBoxPreference 
            android:defaultValue="false"
            android:key="pref_key_hidebf"
            android:title="@string/hidebf_text"
            android:summary="@string/hidebf_summary"
            />
        <CheckBoxPreference 
            android:defaultValue="false"
            android:key="pref_key_hiderecent"
            android:title="@string/hiderecent_text"
            android:summary="@string/hiderecent_summary"
            />
    </PreferenceCategory>
     <PreferenceCategory
        android:key="pref_key_received"
        android:title="@string/pref_received_title" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_screenshot"
            android:title="@string/screenshot_text"
            android:summary="@string/screenshot_text_summary" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_sent"
        android:title="@string/pref_sent_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_fulltext"
            android:title="@string/full_text"
            android:summary="@string/full_text_summary"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_colour"
        android:title="@string/pref_colour_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_rainbow"
            android:title="@string/rainbow_text"
            android:summary="@string/rainbow_text_summary"
            />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_txtcolour"
            android:title="@string/txtcolour_text"
            />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_txtstyle"
            android:title="@string/txtstyle_text"
            android:summary="@string/txtstyle_text_summary"
            />
         <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_txtgravity"
            android:title="@string/txtgravity_text"
            android:summary="@string/txtgravity_text_summary"
            />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_bgcolour"
            android:title="@string/bgcolour_text"
            />         
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_bg_transparency"
            android:title="@string/bg_transparency_text"
            />
         <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_size"
            android:title="@string/size_text"
            />           
         <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_transparency"
            android:title="@string/transparency_text"
            />
    </PreferenceCategory>
</PreferenceScreen>